--- a/7FlipCounter/src/app/components/display-player/display-player.component.html
+++ b/7FlipCounter/src/app/components/display-player/display-player.component.html
@@ -1,35 +1,39 @@
 <main>
-  <mat-form-field class="name-label">
-    <mat-label>Spieler</mat-label>
-    <input matInput type="text" [(ngModel)]="playerName">
-    @if (playerName()) {
-      <button  matSuffix mat-icon-button aria-label="Clear" (click)="playerName.set('')">
-        <mat-icon>close</mat-icon>
-      </button>
-    }
-  </mat-form-field>
-
-  <section class="spinner-container">
-    <mat-card-content>
-      <mat-progress-spinner
-        [mode]="mode"
-        [value]="counter()/2"
-        [diameter]="maxValueCounter()">
-      </mat-progress-spinner>
-      <div class="spinner-text">{{counter()}}</div>
-    </mat-card-content>
-  </section>
-  <section>
-    <mat-form-field class="set-counter-value">
-      <mat-label>Clearable input</mat-label>
-      <input matInput type="text" [(ngModel)]="counter">
-      @if (counter()) {
-        <button matSuffix mat-icon-button aria-label="Clear" (click)="counter.set(0)">
+  <section class="name-container">
+    <mat-form-field>
+      <mat-label>Spieler</mat-label>
+      <input matInput type="text" [(ngModel)]="playerName">
+      @if (playerName()) {
+        <button  matSuffix mat-icon-button aria-label="Clear" (click)="playerName.set('')">
           <mat-icon>close</mat-icon>
         </button>
       }
     </mat-form-field>
   </section>
-  <label>{{playerName()}}</label>
 
+  <section class="spinner-container">
+    <mat-card-content>
+      <mat-progress-spinner
+        [mode]="mode"
+        [value]="counter()"
+      >
+      </mat-progress-spinner>
+      <div class="spinner-text">{{counter()}}</div>
+    </mat-card-content>
+  </section>
+
+  <section class="add-value-container">
+    <mat-form-field>
+      <mat-label>Clearable input</mat-label>
+      <input matInput type="text"
+             [(ngModel)]="inputValue"
+             (focusout)="focusOut()"
+      >
+      @if (inputValue()) {
+        <button matSuffix mat-icon-button aria-label="Clear" (click)="inputValue.set(0)">
+          <mat-icon>close</mat-icon>
+        </button>
+      }
+    </mat-form-field>
+  </section>
 </main>
