Implemented PlayerService for localStorage

--- a/7FlipCounter/src/app/components/content/content.component.html
+++ b/7FlipCounter/src/app/components/content/content.component.html
@@ -1,1 +1,37 @@
+
+<body>
+
+<div class="container">
+  <header>
+    <h1>FLIP7</h1>
+  </header>
+
+  <div class="game-info">
+    <div class="tabs">
+      <button>INITIALS</button>
+      <button>TOTAL</button>
+    </div>
+    <div class="player-info">
+      <div class="player">
+        <span>FFF</span>
+        <span>88</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="rounds">
+    <button>ROUND 1</button>
+    <button>ROUND 2</button>
+    <button>ROUND 3</button>
+  </div>
+
+  <div class="action-buttons">
+    <button>NEW GAME</button>
+    <button>ADD PLAYER</button>
+  </div>
+</div>
+
+</body>
+
+
 <app-display-player></app-display-player>
