--- a/7FlipCounter/src/app/components/display-player/display-player.component.scss
+++ b/7FlipCounter/src/app/components/display-player/display-player.component.scss
@@ -1,23 +1,27 @@
 main {
   background-color: yellow;
   display: flex;
-  width: 80vw;
-  height: 10vh;
+  margin: 10px 20px 10px 20px;
 }
 
 .name-container {
   background-color: black;
   display: flex;
-  width: 20vw;
-  height: 70%;
+  margin: 10px 20px 10px 20px;
+  width: 40%;
+
+  mat-form-field {
+    margin: 15px 20px 15px 20px;
+  }
 }
 
 .spinner-container {
   background-color: red;
+  display: flex;
+  margin: 10px 20px 10px 20px;
+  position: relative;
   width: 100px;
   height: 100px;
-  position: relative;
-  display: flex;
   align-content: center;
   align-items: center;
 }
@@ -34,4 +38,10 @@ main {
 .add-value-container {
   background-color: blue;
   display: flex;
+  margin: 10px 20px 10px 20px;
+  width: 18%;
+
+  mat-form-field {
+    margin: 15px 20px 15px 20px;
+  }
 }
