--- a/7FlipCounter/src/app/components/display-player/display-player.component.scss
+++ b/7FlipCounter/src/app/components/display-player/display-player.component.scss
@@ -1,17 +1,22 @@
 main {
   background-color: yellow;
   display: flex;
+  height: 10vh;
   margin: 10px 20px 10px 20px;
 }
 
 .name-container {
   background-color: black;
   display: flex;
-  margin: 10px 20px 10px 20px;
+  margin: 10px 20px 10px 2px;
   width: 40%;
 
   mat-form-field {
-    margin: 15px 20px 15px 20px;
+    min-height: 65px;
+    min-width: 120px;
+    max-width: 180px;
+    height: 100%;
+    width: 100%;
   }
 }
 
