--- a/7FlipCounter/src/app/components/content/content.component.scss
+++ b/7FlipCounter/src/app/components/content/content.component.scss
@@ -94,6 +94,10 @@ main {
   }
 }
 
+.current-player {
+  background-color: rgba(76, 175, 80, 0.3) !important;
+}
+
 .mat-column-round input {
   width: 60px;
   padding: 4px;
