--- a/7FlipCounter/src/app/components/content/content.component.scss
+++ b/7FlipCounter/src/app/components/content/content.component.scss
@@ -1,18 +1,23 @@
 main {
-  width: 100%;
+  width: 95%;
   height: 100%;
-  padding: 16px;
-}
+  margin: 10px auto;
 
-.button-container {
-  display: flex;
-  justify-content: space-around;
-  margin: 20px 0 10px 0;
-  gap: 16px;
+  header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 10%;
+  }
+
+  .header > * {
+    margin-top: 10px;
+  }
 }
 
 .table-container {
-  height: 400px;
+  height: 85%;
   width: 100%;
   max-width: 900px;
   margin: 0 auto;
@@ -22,91 +27,52 @@ main {
 .mat-table {
   width: 100%;
   min-width: 600px;
+  table-layout: fixed;
 }
 
 .mat-column-delete {
-  width: 80px;
-  min-width: 80px;
-  text-align: center;
-}
+  width: 20px;
+  min-width: 20px;
+  max-width: 50px;
+  padding: 0;
 
-.mat-column-order {
-  width: 10px;
-  min-width: 10px;
-  text-align: center;
-}
+  button{
+    margin:0;
+    padding:0;
+    width: 100%;
+    height: 100%;
 
-.mat-column-position {
-  width: 10px;
-  min-width: 10px;
-  text-align: center;
-}
-
-.mat-column-score {
-  width: 120px;
-  min-width: 120px;
-  text-align: center;
-}
-
-.mat-column-name {
-  min-width: 150px;
-  padding: 0 16px;
-}
-
-.mat-column-round {
-  min-width: 120px;
-  padding: 0 16px;
-}
-
-.mat-cell,
-.mat-header-cell {
-  padding: 0 8px;
-  display: flex;
-  align-items: center;
-}
-
-.mat-column-score {
-  width: 120px;
-  min-width: 120px;
-  text-align: center;
-  justify-content: center;
-}
-
-.spinner-container {
-  position: relative;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .spinner-text {
-    position: absolute;
-    font-size: 12px;
-    font-weight: 500;
-    color: #333;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    mat-icon {
+      font-size: 18px;
+      line-height: 18px;
+      height: 18px;
+      width: 18px;
+    }
   }
 }
 
-.current-player {
-  background-color: rgba(76, 175, 80, 0.3) !important;
+.mat-column-order {
+  width: 20px;
+  min-width: 20px;
+  max-width: 50px;
+  padding: 0;
+
+  div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+    mat-icon {
+      font-size: 18px;
+      line-height: 18px;
+      height: 18px;
+      width: 18px;
+    }
 }
 
-.mat-column-round input {
-  width: 60px;
-  padding: 4px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-
-.example-drag-cursor {
-  margin-right: 16px;
+.drag-cursor {
   cursor: move;
 }
 
@@ -130,3 +96,67 @@ main {
 .cdk-drop-list-dragging .mat-row:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.mat-column-position {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  min-width: 40px;
+  padding: 0;
+}
+
+.mat-column-name {
+  min-width: 150px;
+  width: auto;
+  padding: 0 5px;
+}
+
+.mat-column-score {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  min-width: 80px;
+  max-width: 150px;
+  padding: 0;
+
+  .spinner-container {
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+  }
+
+  .spinner-text {
+    position: absolute;
+    transform: translate(0%, 0%);
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: #333;
+  }
+}
+
+.mat-column-round {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 80px;
+  max-width: 150px;
+  padding: 0 16px;
+}
+
+.mat-column-round input{
+  width: 40px;
+  padding: 4px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.current-player {
+  background-color: rgba(76, 175, 80, 0.3) !important;
+}
+
+
