Change columnname from Round to Points

--- a/7FlipCounter/src/app/components/content/content.component.html
+++ b/7FlipCounter/src/app/components/content/content.component.html
@@ -73,9 +73,9 @@
         </mat-cell>
       </ng-container>
 
-      <!-- Runde Column -->
-      <ng-container matColumnDef="round">
-        <mat-header-cell  *matHeaderCellDef>Runde</mat-header-cell>
+      <!-- Punkte Column -->
+      <ng-container matColumnDef="roundInput">
+        <mat-header-cell  *matHeaderCellDef>Punkte</mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.symbol}}
           <input #roundInput
                  class="round-input"
