--- a/7FlipCounter/src/app/components/content/content.component.scss
+++ b/7FlipCounter/src/app/components/content/content.component.scss
@@ -139,7 +139,7 @@ main {
   }
 }
 
-.mat-column-round {
+.mat-column-roundInput {
   display: flex;
   align-items: center;
   justify-content: center;
