Add Autofocus to Addplayer Component

--- a/7FlipCounter/src/app/components/add-player-dialog/add-player-dialog.component.html
+++ b/7FlipCounter/src/app/components/add-player-dialog/add-player-dialog.component.html
@@ -3,7 +3,7 @@
     <p>Gib einen Namen ein.</p>
     <mat-form-field>
       <mat-label>Name</mat-label>
-      <input matInput autofocus [(ngModel)]="name" />
+      <input cdkFocusInitial matInput [(ngModel)]="name" />
     </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions>
