Fix roundPoints input View

--- a/7FlipCounter/src/app/components/content/content.component.scss
+++ b/7FlipCounter/src/app/components/content/content.component.scss
@@ -148,7 +148,7 @@ main {
   padding: 0 16px;
 }
 
-.mat-column-round input{
+.mat-column-roundInput input{
   width: 40px;
   padding: 4px;
   border: 1px solid #ddd;
