--- a/7FlipCounter/src/app/components/content/content.component.html
+++ b/7FlipCounter/src/app/components/content/content.component.html
@@ -2,7 +2,7 @@
   <header>
     <button mat-raised-button (click)="openAddPlayerDialog()">Spieler hinzufügen</button>
     <button mat-raised-button (click)="newGame()">Neues Spiel</button>
-    <button mat-raised-button (click)="newRound()" [disabled]="!isNextRoundValid()">Nächste Runde</button>
+    <button mat-raised-button (click)="onNewRoundClick()" [disabled]="!isNextRoundValid()">Nächste Runde</button>
     <mat-checkbox [(ngModel)]="editPlayersCheckBox" (ngModelChange)="editPlayersCheckBox.set($event)">Bearbeiten</mat-checkbox>
   </header>
 
