--- a/7FlipCounter/src/app/components/add-player-dialog/add-player-dialog.component.html
+++ b/7FlipCounter/src/app/components/add-player-dialog/add-player-dialog.component.html
@@ -1,14 +1,15 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <main>
   <mat-dialog-content>
     <p>Gib einen Namen ein.</p>
     <mat-form-field>
       <mat-label>Name</mat-label>
-      <input cdkFocusInitial matInput [(ngModel)]="name" />
+      <input #nameInput cdkFocusInitial matInput [(ngModel)]="name" />
     </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-button (click)="onCancelClick()">Abbrechen</button>
-    <button mat-button [mat-dialog-close]="name()" cdkFocusInitial>Ok</button>
+    <button mat-button [mat-dialog-close]="name()">Ok</button>
   </mat-dialog-actions>
 </main>
 
