--- a/7FlipCounter/src/app/components/add-player-dialog/add-player-dialog.component.html
+++ b/7FlipCounter/src/app/components/add-player-dialog/add-player-dialog.component.html
@@ -4,12 +4,27 @@
     <p>Gib einen Namen ein.</p>
     <mat-form-field>
       <mat-label>Name</mat-label>
-      <input #nameInput cdkFocusInitial matInput [(ngModel)]="name" />
+      <input #nameInput cdkFocusInitial matInput [(ngModel)]="name" [disabled]="showRegularNames()" />
     </mat-form-field>
+
+    <div class="toggle-button">
+      <mat-checkbox [(ngModel)]="showRegularNames">Namen aus Liste auswählen</mat-checkbox>
+    </div>
+
+    @if(showRegularNames()) {
+      <div  class="name-list">
+          @for (item of regularNameList(); track item.id){
+            <mat-checkbox [(ngModel)]="item.selected">
+              {{ item.name }}
+            </mat-checkbox>
+          }
+      </div>
+    }
+
   </mat-dialog-content>
+
   <mat-dialog-actions>
-    <button mat-button (click)="onCancelClick()">Abbrechen</button>
-    <button mat-button [mat-dialog-close]="name()">Ok</button>
+      <button mat-button (click)="onCancelClick()">Abbrechen</button>
+      <button mat-button [mat-dialog-close]="getSelectedNamesOrInput()">Ok</button>
   </mat-dialog-actions>
 </main>
-
