--- a/7FlipCounter/src/app/components/add-player-dialog/add-player-dialog.component.scss
+++ b/7FlipCounter/src/app/components/add-player-dialog/add-player-dialog.component.scss
@@ -1,8 +1,24 @@
 main {
-  width: 250px;
-  height: 250px;
+  width: 260px;
+  height: 300px;
+
 }
 
-.activate-regular-player-radio {
-  background: aqua;
+.dialog-content {
+  width: fit-content;
+  height: auto;
+  overflow: hidden;
+}
+
+.name-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-top: 8px;
+}
+
+.name-list mat-checkbox {
+  flex: 0 0 calc(50% - 4px);
+  display: flex;
+  align-items: center;
 }
