--- a/7FlipCounter/src/app/components/content/content.component.scss
+++ b/7FlipCounter/src/app/components/content/content.component.scss
@@ -16,8 +16,16 @@ main {
 }
 
 @media (max-width: 380px) {
-  header {
-    height: 20%;
+  main header {
+    height: 12%;
+    padding: 8px 0;
+    margin-bottom: 6px;
+  }
+}
+
+@media (max-width: 320px) {
+  main header {
+    height: 15%;
     padding: 8px 0;
     margin-bottom: 6px;
   }
