--- a/7FlipCounter/src/app/components/start-new-game-dialog/start-new-game-dialog.component.html
+++ b/7FlipCounter/src/app/components/start-new-game-dialog/start-new-game-dialog.component.html
@@ -3,5 +3,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button [mat-dialog-close]="true">Ja</button>
-  <button mat-button [mat-dialog-close]="true" >Nein</button>
+  <button mat-button [mat-dialog-close]="false" >Nein</button>
 </mat-dialog-actions>
