refactor game service for immutable state, update prettier format

--- a/7FlipCounter/src/app/components/start-new-game-dialog/start-new-game-dialog.component.html
+++ b/7FlipCounter/src/app/components/start-new-game-dialog/start-new-game-dialog.component.html
@@ -1,7 +1,7 @@
 <mat-dialog-content>
   Neues Spiel mit den selben Spielern?
 </mat-dialog-content>
-<mat-dialog-actions>
+<mat-dialog-actions class="actions">
   <button mat-button [mat-dialog-close]="true">Ja</button>
   <button mat-button [mat-dialog-close]="false" >Nein</button>
 </mat-dialog-actions>
